--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 notes. I'm going to stop updating the numbers when I remove completed tasks, since it's a lot of work.
 Also going to start prioritizing (short term priorities) Also a lot of repeats here, gonna start merging them
 
+Total issues to address now: 21
+
 Urgent: (0 total)
 High: (4 total)
 1. Improve stroking, particularly where Tiller-Hanson breaks down.
