--- a/TODO.txt
+++ b/TODO.txt
@@ -51,8 +51,10 @@ High: (5 total)
    - possibly try to update only pixels whose values change in each layer?
    - Get rid of MSAA antialiasing, it adds about 20%-25% to code run time with very little benefit. (DONE)
    - Related to previous point, perhaps improve the heuristic AA to minimize any loss in quality
-6. Switch everything over to DFunctions
+6. Switch everything over to DFunctions 
+   Hm. Is this good? 
 7. Create Evaluatable typeclass
+   (DONE)
 Medium: (9 total)
 1. Refactor the Path/Contour/ClosedPath abstraction. 
    ClosedPath isn't a great abstraction. Also it would be great to provide a more unified interface to 
